/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.4.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Βιβλιοθήκες για το JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.14.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.14.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Βιβλιοθήκες για το Mockito (Mock Tests)
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'

    // This dependency is used by the application.
    implementation libs.guava

    // Implementaion for libraries
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'com.mysql:mysql-connector-j:8.3.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'com.example.BarberShop.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()

    jvmArgs('-XX:+EnableDynamicAgentLoading')
}

jar {
    manifest {
        attributes(
            
            'Main-Class': 'com.login.Login' 
        )
    }
    
    // Αυτή η εντολή λέει στο Gradle να πάρει και όλες τις εξωτερικές βιβλιοθήκες (MySQL, JCalendar)
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    
    // Αποτρέπει τυχόν σφάλματα αν υπάρχουν διπλότυπα αρχεία κατά το πακετάρισμα
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

test {
    useJUnitPlatform()
}